--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -8,7 +8,7 @@
         </mat-form-field>
         <mat-form-field class="full-width">
             <mat-label>Email cím</mat-label>
-            <input matInput formControlName="email">
+            <input matInput type="email" formControlName="email">
         </mat-form-field>
         <mat-form-field class="full-width">
             <mat-label>Jelszó</mat-label>
@@ -16,11 +16,11 @@
         </mat-form-field>
         <mat-form-field class="full-width">
             <mat-label>Jelszó újra</mat-label>
-            <input matInput type="confirm_password" formControlName="confirm_password">
+            <input matInput type="password" formControlName="confirm_password">
         </mat-form-field>
         <mat-form-field class="full-width">
             <mat-label>Telefonszám</mat-label>
-            <input matInput formControlName="phone_umber">
+            <input matInput formControlName="phone_number">
         </mat-form-field>
         <mat-form-field class="full-width">
             <mat-label>Cím</mat-label>
