--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav>
     <mat-toolbar color="primary">
         <span>
-            <a routerLink="/">JWT Auth App</a>
+            <a routerLink="/">JWT Auth</a>
         </span>
         <span class="spacer"></span>
         <div class="button-container" *ngIf="!authenticated">
