--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -6,7 +6,7 @@
 }
 
 .register-card {
-    width: 500px;
+    width: 300px;
     padding: 20px;
     text-align: center;
 }
@@ -18,4 +18,10 @@
 
 .button-container {
     margin-top: 20px;
+}
+
+@media screen and (min-width: 550px) {
+    .register-card {
+        width: 500px;
+    }
 }
