--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,38 @@
 .mat-card {
-    display: flex; 
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center; 
     align-items: center;
     margin-top: 20px;
 }
+
+.formed-card {
+    background-color: #f5f5f5;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 20px;
+    width: 80%;
+    margin: 30px auto;
+}
+
+.data-container {
+    text-align: center;
+}
+
+h1 {
+    font-size: 24px;
+    margin-bottom: 0;
+}
+  
+h2 {
+    font-size: 20px;
+    margin-top: 40px;
+}
+
+@media screen and (min-width: 550px) {
+    .mat-card {
+        width: 50%;
+    }
+}
+  
